styles/basket.css
.basket {
    height: 794px;
    position: sticky;
    width: 435px;
    top: 0;
    right: 0;
    display: flex;
    flex-direction: column;
    align-items: center;
    margin-top: 77px;
    padding: clamp(16px, calc(-50px + 11vh), 60px) 0;
    border-top-left-radius: 30px;
    border-bottom-left-radius: 30px;
    background-color: #363534;
}

.closeIcon {
    display: none;
}

.basketMobileMenu {
    display: none;
}

.basketTitle {
    font-size: 32px;
    font-weight: 700;
    color: #FDEADC;
    margin-bottom: 36px;
}

.basketContent {
    max-width: 340px;
    width: 100%;
    height: 100%;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    gap: 36px;
}

.dishes {
    display: flex;
    max-height: 355px;
    flex-direction: column;
    align-items: flex-end;
    gap: 8px;
    overflow-y: auto;
}

.mealBasketBox {
    width: 100%;
    display: flex;
    flex-direction: column;
    border-radius: 20px;
    padding: 20px;
    background-color: #FDEADC;
    gap: 8px;
    font-weight: 700;
    font-size: 22px;
}

.titleBasketLine {
    line-height: 26px;
    display: flex;
    justify-content: space-between;
    font-weight: 700;
    font-size: 22px;
    gap: 6px;
}

.Famount {
    display: flex;
}

.mealTitle {
    white-space: wrap;
    max-width: 232px;
}

.bottomBasketBox {
    height: 29px;
    display: flex;
    justify-content: space-between;
}

.leftBasketBox {
    display: flex;

    .plusAndMinus {
        cursor: pointer;
    }
}

.garbageIcon {
    width: 24px;
    height: 24px;
}

.garbageIcon:hover {
    cursor: pointer;
    background-color: white;
    color: #E76C1F;
}

.addButton {
    display: block;
    color: black;
}

.addedButton {
    display: block;
    color: #E76C1F;
}

.addedButton:hover {
    cursor: default;
    box-shadow: none;
}

.emptyBasked {
    flex-direction: column;
    align-items: center;
    justify-content: space-between;
    gap: 40px;
}

.basketTextBox {
    height: 100%;
    display: flex;
    text-align: center;
    flex-direction: column;
    gap: 8px;
}

p {
    color: #FDEADC;
    font-size: 24px;
    font-weight: 500;
    margin: 0px;
}

.buttomBox {
    height: 208px;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
}

.calculationTable {
    display: flex;
    flex-direction: column;
    gap: 8px;
    color: white;
}

.subTotalLine {
    display: flex;
    justify-content: space-between;
    font-size: 20px;
    font-weight: 600;
}

.deliverFee {
    display: flex;
    justify-content: space-between;
    font-size: 20px;
    font-weight: 600;
}

.decorationLine {
    max-width: 340px;
    width: 100%;
    height: 3px;
    background-color: white;
}

.totalLine {
    display: flex;
    justify-content: space-between;
    font-size: 22px;
    font-weight: 700;
}

.orderButton {
    height: 64px;
    border-radius: 60px;
    background-color: #E76C1F;
    color: #FBFBFB;
}

.orderButton:hover {
    color: #FBFBFB;

}

@media (max-width: 1050px) {
    .basket {
        max-width: 343px;
        width: 100%;
        height: auto;
        position: fixed;
        top: unset;
        right: 0;
        bottom: 0;
        left: 0;
        flex-direction: column;
        align-items: center;
        margin: 0 auto 78px auto;
        border-top-left-radius: 30px;
        border-top-right-radius: 30px;
        border-bottom-left-radius: 0;
        background-color: #363534;

        transform: translateY(100%);
        transition: transform 0.3s ease, opacity 0.3s ease;

        .basketContent {
            max-width: 300px;
        }
    }

    .closeIcon{
        position: absolute;
        top: 0;
        right: -44px;
        display: block;
        width: 24px;
        height: 24px;
    }

    .closeIcon:hover {
        cursor: pointer;
    }

    .basket.active {
        transform: translateY(0);
    }

    .bottomMobileMenu {
        height: 78px;
        z-index: 2;
        display: flex;
        align-items: center;
        justify-content: center;
        gap: 36px;
        position: fixed;
        left: 0;
        right: 0;
        bottom: 0;
        background-color: #292928;

        img {
            width: 30px;
            height: 30px;
        }

        img:hover {
            background-color: #E76C1F;
            cursor: pointer;
        }

        .cart {
            position: relative;
        }

        .badge {
            position: absolute;
            top: -5px;
            right: -5px;

            background: orange;
            color: white;
            font-size: 12px;
            font-weight: bold;

            border-radius: 50%;
            min-width: 18px;
            height: 18px;
            padding: 2px;

            display: flex;
            align-items: center;
            justify-content: center;
        }
    }
}


@media (max-height: 1000px) {
    .buttomBox {
        height: auto;
        justify-content: center;
        gap: 10px;
    }

    .basketContent {
        gap: 8px;
    }

    .dishes {
        height: 333px;
    }

    .mealBasketBox {
        padding: 16px;
    }
}

